Finalisation du client JS

--- a/web3_tp_final/SitAPupAdmin/Views/Admins/AjoutAdmin.cshtml
+++ b/web3_tp_final/SitAPupAdmin/Views/Admins/AjoutAdmin.cshtml
@@ -9,17 +9,19 @@
 
     <div class="row">
         <div class="col-3" id="ajoutAdmin">
-            <form id="formAjoutAdmin">
+            <form id="formAjoutAdmin" class="marginBottom">
                 <div>
                     <label for="name">Nom d'Utilisateur</label>
                     <input type="text" name="name" id="nameAdminAjout" />
                 </div>
                 <div>
                     <label for="password">Mot de passe</label>
-                    <input type="text" name="password" id="passwordAdminAjout" />
+                    <input type="text" name="password" id="passwordAdminAjout"  />
                 </div>
             </form>
-            <button class="btn btn-neutral btn-round btn-lg border-dark" onclick="postAdmin()">Ajouter Admin</button>
+            <div class="card-footer text-center">
+                <button class="btn btn-neutral btn-round btn-lg border-dark " onclick="postAdmin()">Ajouter Admin</button>
+            </div>
         </div>
     </div>
         }
