--- a/web3_tp_final/SitAPupAdmin/Views/Admins/SupprimerAdmin.cshtml
+++ b/web3_tp_final/SitAPupAdmin/Views/Admins/SupprimerAdmin.cshtml
@@ -14,9 +14,11 @@
                 <label for="idSupprimerAdmin">Id a supprimer</label>
                 <input type="text" id="idSupprimerAdmin" />
             </div>
-            <button class="btn btn-neutral btn-round btn-lg border-dark" onclick="deleteAdmin()">Supprimer</button>
+            <div class="card-footer text-center">
+                <button class="btn btn-neutral btn-round btn-lg border-dark marginTop" onclick="deleteAdmin()">Supprimer</button>
+            </div>
+            </div>
         </div>
-    </div>
 </div>
     }
     else
