--- a/web3_tp_final/SitAPupAdmin/Views/Users/RechercherUser.cshtml
+++ b/web3_tp_final/SitAPupAdmin/Views/Users/RechercherUser.cshtml
@@ -14,9 +14,11 @@
                 <label for="idRecherche">ID du User recherché</label>
                 <input type="text" name="idRecherche" id="idRecherche" />
             </div>
-            <button class="btn btn-neutral btn-round btn-lg border-dark" onclick="rechercheUserParID()"> Rechercher </button>
+            <div class="card-footer text-center">
+                <button class="btn btn-neutral btn-round btn-lg border-dark marginTop" onclick="rechercheUserParID()"> Rechercher </button>
+            </div>
+            </div>
         </div>
-    </div>
 </div>
     <div class="row">
         <div class="col-6" id="reponse">
