--- a/web3_tp_final/SitAPupAdmin/Views/Users/ModifierUser.cshtml
+++ b/web3_tp_final/SitAPupAdmin/Views/Users/ModifierUser.cshtml
@@ -12,8 +12,10 @@
             <div id="rechercheParIDUserModif">
                 <label for="idRechercheUserModif">ID du User recherché</label>
                 <input type="text" name="idRechercheUserModif" id="idRechercheUserModif" />
-                <button class="btn btn-neutral btn-round btn-lg border-dark" onclick="rechercheUserParIDUserModif()"> Rechercher </button>
-            </div>
+                <div class="card-footer text-center">
+                    <button class="btn btn-neutral btn-round btn-lg border-dark" onclick="rechercheUserParIDUserModif()"> Rechercher </button>
+                    </div>
+                </div>
             <br />
             <div id="modifierUser" style="visibility:hidden">
                 <div>
@@ -22,34 +24,45 @@
                             <label for="userId">Id</label>
                             <input type="text" id="userIdModif" name="userId" />
                         </div>
-                        
+
                         <div>
                             <label for="username">Nom d'utilisateur</label>
                             <input type="text" name="username" id="usernameModifUser" />
                         </div>
-                        
+
                         <div>
                             <label for="email">Email</label>
                             <input type="text" name="email" id="emailModifUser" />
                         </div>
-                        
+
                         <div>
                             <label for="password">Mot de passe</label>
                             <input type="password" name="password" id="passwordModifUser" />
                         </div>
-                        
+
                         <div>
                             <label for="address">Adresse</label>
                             <input type="text" name="address" id="addressModifUser" />
                         </div>
-                        
+
                         <div>
                             <label for="phoneNumber">Numéro de Téléphone</label>
                             <input type="text" name="phoneNumber" id="phonenumberModifUser" />
                         </div>
+                        <div class="form-group">
+                            <label class="control-label"></label>
+                            <select class="form-control" id="status">
+                                <option value="active" selected="selected">Active</option>
+                                <option value="deactivated">Deactivated</option>
+                                
+                            </select>
+                            
+                        </div>
                     </form>
-                    <button class="btn btn-neutral btn-round btn-lg border-dark" onclick="modifyUser()">Modifier</button>
-                </div>
+                    <div class="card-footer text-center">
+                        <button class="btn btn-neutral btn-round btn-lg border-dark marginTop" onclick="modifyUser()">Modifier</button>
+                    </div>
+                    </div>
             </div>
         </div>
     </div>
@@ -96,7 +109,8 @@
                         'password': $('#passwordModifUser').val(),
                         'email': $('#emailModifUser').val(),
                         'address': $('#addressModifUser').val(),
-                        'phoneNumber': $('#phonenumberModifUser').val()
+                        'phoneNumber': $('#phonenumberModifUser').val(),
+                        'status': $('#status').val()
 
                     }
 
