--- a/web3_tp_final/web3_tp_final/Views/Login/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Login/Index.cshtml
@@ -1,6 +1,10 @@
 @model web3_tp_final.Models.User
 @using web3_tp_final.Helpers;
 
+@if (TempData["nonTrouve"] != "")
+{
+    <p class="alert-danger">@TempData["nonTrouve"]</p>
+}
 <div class="d-flex" id="LoginContainer">
     <div class="log-card">
         <div id="LogInCard">
