--- a/web3_tp_final/web3_tp_final/Views/Chat/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Chat/Index.cshtml
@@ -90,7 +90,7 @@
         </div>
     </div>
 </div>
-<div class="container" style="display: none;">
+<div class="container">
     <div class="row">&nbsp;</div>
     <div class="row">
         <input type="text" id="senderInput" value="@sender.UserName" style="visibility:hidden" readonly="true" name="senderInput" />
@@ -99,51 +99,6 @@
         <input type="text" id="userChat" value="@receiver.UserName" style="visibility:hidden" readonly="true" name="userChat" />
         <input type="text" id="timeStamp" value="@DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")" style="visibility:hidden" readonly="true" name="timeStamp" />
         <input type="text" id="content" value="" style="visibility:hidden" readonly="true" name="content" />
-    </div>
-</div>
-
-@{ 
-    bool test = true;
-}
-
-<div id="ConversationList">
-    <div id="Conversations">
-        @for (int i = 0; i < 30; i++)
-        {
-            <div class="d-block">
-                Salut
-            </div>
-
-            test = !test;
-        }
-    </div>
-</div>
-
-<div id="MainConversation">
-    <div id="CurrentConversation" class="container-fluid">
-        @for (int i = 0; i < 30; i++)
-        {
-            <div class="d-block sap-chat-message @(test ? "user-message" : "recipient-message")">
-                <div class="sap-sent-message">
-                    Bonjour
-                </div>
-            </div>
-
-            test = !test;
-        }
-    </div>
-
-    <div id="CurrentMessage" class="container-fluid">
-        <div class="row no-gutters">
-            <div class="form-group col-11" style="padding-right: 20px">
-                <textarea rows="1" id="NextMessage" class="form-control"></textarea>
-            </div>
-            <div class="form-group col-1">
-                <button id="SendMessage">
-                    Send
-                </button>
-            </div>
-        </div>
     </div>
 </div>
 
