--- a/web3_tp_final/web3_tp_final/Views/Users/_UserDetails.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Users/_UserDetails.cshtml
@@ -19,7 +19,7 @@
                     <div class="col-2 w-100">
                     </div>
                     <div class="col-5">
-                        <a asp-controller="Chat" asp-route-id="@Model.UserID" asp-action="Index">
+                        <a asp-controller="Chat" asp-route-id="@Model.UserID" asp-action="Conversation">
                             <img src="https://img.icons8.com/ios-glyphs/30/ffffff/chat.png" class="btn bouton-size" />
                         </a>
                     </div>
