--- a/web3_tp_final/web3_tp_final/Views/Chat/_MainConversation.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Chat/_MainConversation.cshtml
@@ -1,5 +1,9 @@
 ﻿@model web3_tp_final.DTO.ConversationDTO
 
+<div id="CurrentRecipient">
+    @ViewBag.CurrentRecipient.UserName
+</div>
+
 <div id="CurrentConversation" class="container-fluid">
     @foreach (Message message in Model.Conversation)
     {
