--- a/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Pets" asp-action="Index">Mes animaux</a>
                         </li>
                         <li class="nav-item website-navbar-link">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Chat" asp-action="Index">Chat</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Chat" asp-action="Conversation">Chat</a>
                         </li>
                         <li class="nav-item website-navbar-link">
                             <a class="nav-link text-white" href="/Users/@ViewBag.CurrentUser.UserID/Appointments">Rendez-vous</a>
