--- a/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
@@ -577,6 +577,8 @@ section {
     position: absolute;
     left: 0;
     overflow-y: auto;
+    background-color: rgba(224, 210, 173,0.8);
+    border-right: 1px solid black;
 }
 
 #MainConversation {
@@ -586,8 +588,17 @@ section {
     right: 0;
 }
 
+#CurrentRecipient {
+    height: 10%;
+    display: flex;
+    align-items: center;
+    padding: 0 30px;
+    background-color: rgb(107 59 43 / 86%);
+    color: white;
+}
+
 #CurrentConversation {
-    height: 90%;
+    height: 80%;
     overflow-y: scroll;
 }
 
@@ -622,6 +633,8 @@ section {
     color: #AB753F;
     padding: 10px;
     border-radius: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .user-message .sap-sent-message {
@@ -637,4 +650,36 @@ section {
 .recipient-message .sap-sent-message{
     float: left;
     background-color: rgba(224, 210, 173,0.8)
+}
+
+.last-message {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 10px;
+    border: 1px solid;
+    font-size: 15px;
+}
+
+.last-message:hover {
+    background-color: rgba(173, 141, 50, 0.9);
+}
+
+.active-conversation {
+    background-color: rgba(173, 141, 50, 0.9);
+}
+
+.recipient-last-message-name {
+    font-size: 20px !important;
+}
+
+.EmptyChat {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+    margin: 30px;
+    border: 1px solid black;
+    background-color: rgba(224, 210, 173,0.8);
+    border-radius: 20px;
+    color: #AB753F;
 }
