Get chat notificatoin when not in chat tab

--- a/web3_tp_final/web3_tp_final/Views/Chat/_MainConversation.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Chat/_MainConversation.cshtml
@@ -23,7 +23,7 @@
             <textarea rows="1" id="NextMessage" class="form-control"></textarea>
         </div>
         <div class="form-group col-1">
-            <button type="button" id="SendMessageToRecipient" onclick="SendConversationMessage()">
+            <button type="button" id="SendMessageToRecipient" onclick="SendConversationMessage()" disabled>
                 Send
             </button>
         </div>
